background stretch fix

--- a/src/index.css
+++ b/src/index.css
@@ -6,6 +6,8 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   background-image: url(../src/assets/images/background.jpg);
+  background-repeat: "no-repeat";
+  background-size: cover;
   width: 100vw;
   height: 100vh;
 }
